--- a/css/main.css
+++ b/css/main.css
@@ -32,8 +32,6 @@ a:active {
 /* Header */
 
 header {
-    position:fixed;
-    top: 0;
     display: flex;
     justify-content: center;
     background-color: #151515;
@@ -43,11 +41,9 @@ header {
 }
 
 .navbar {
-    position:fixed;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    top: 0;
     margin-right: 20px;
     max-width: 1500px;
     height: 140px;
@@ -75,7 +71,8 @@ header {
 /* Body Content */
 
 .main {
-    margin-top: 150px;
+    margin-top: 60px;
+    margin-bottom: 30px;
     padding: 0 10%;
     z-index: 1;
     width: 80%;
@@ -138,9 +135,6 @@ header {
 /* Footer */
 
 footer {
-    position: fixed;
-    left:0;
-    bottom:0;
     height: 36px;
     width: 100%;
     padding-top: 10px;
@@ -157,4 +151,8 @@ footer {
 
 .fa-copyright {
     font-size: 18px;
+}
+
+a:hover {
+    color: #828282;
 }
