--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,43 @@
-body {
-    font-family: 'Aclonica', sans-serif;
+:root {
+    --space-1: .5rem;
+    --space-2: 1.0rem;
+    --space-3: 1.5rem;
+    --space-4: 2.0rem;
+}
+
+html, body {
+    height: auto;
+    min-height: 100%;
     font-size: 24px;
+}
+
+body {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    background-color: #333333;
+    font-family: 'Aclonica', sans-serif;
     padding:0;
     margin:0;
-    background-color: #333333;
     color: #cecece;
     text-align: center;
 }
 
-p {
-    font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
+.container {
+    display: flex; 
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 img {
+    max-width: 100%;
+    height: auto;
     margin: 10px;
+}
+
+p {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 0.6rem;
 }
 
 a img:hover {
@@ -51,11 +74,11 @@ header {
 }
 
 .navbar a {
-    margin-right: 3%;
+    margin-right: 3vw;
 }
 
 .navbar img {
-    margin-right: 3%;
+    margin-right: 3vw;
     max-height: 110px;
 }
 
@@ -160,3 +183,187 @@ a:hover {
 h4 {
     line-height: 1.7em;
 }
+
+/* Utility Spacing */
+
+.m0 {
+    margin: 0;
+}
+  
+.mt0 {
+    margin-top: 0;
+}
+  
+.mr0 {
+    margin-right: 0;
+}
+  
+.mb0 {
+    margin-bottom: 0;
+}
+  
+.ml0 {
+    margin-left: 0;
+}
+  
+.m1 {
+    margin: var(--space-1);
+}
+  
+.mt1 {
+    margin-top: var(--space-1);
+}
+  
+.mr1 {
+    margin-right: var(--space-1);
+}
+  
+.mb1 {
+    margin-bottom: var(--space-1);
+}
+  
+.ml1 {
+    margin-left: var(--space-1);
+}
+  
+.m2 {
+    margin: var(--space-2);
+}
+  
+.mt2 {
+    margin-top: var(--space-2);
+}
+  
+.mr2 {
+    margin-right: var(--space-2);
+}
+  
+.mb2 {
+    margin-bottom: var(--space-2);
+}
+  
+.ml2 {
+    margin-left: var(--space-2);
+}
+  
+.m3 {
+    margin: var(--space-3);
+}
+  
+.mt3 {
+    margin-top: var(--space-3);
+}
+  
+.mr3 {
+    margin-right: var(--space-3);
+}
+  
+.mb3 {
+    margin-bottom: var(--space-3);
+}
+  
+.ml3 {
+    margin-left: var(--space-3);
+}
+  
+.m4 {
+    margin: var(--space-4);
+}
+  
+.mt4 {
+    margin-top: var(--space-4);
+}
+  
+.mr4 {
+    margin-right: var(--space-4);
+}
+  
+.mb4 {
+    margin-bottom: var(--space-4);
+}
+  
+.ml4 {
+    margin-left: var(--space-4);
+}
+  
+.mxn1 {
+    margin-left: -var(--space-1);
+    margin-right: -var(--space-1);
+}
+  
+.mxn2 {
+    margin-left: -var(--space-2);
+    margin-right: -var(--space-2);
+}
+  
+.mxn3 {
+    margin-left: -var(--space-3);
+    margin-right: -var(--space-3);
+}
+  
+.mxn4 {
+    margin-left: -var(--space-4);
+    margin-right: -var(--space-4);
+}
+  
+.mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+}
+  
+.p1 {
+    padding: var(--space-1);
+}
+  
+.py1 {
+    padding-top: var(--space-1);
+    padding-bottom: var(--space-1);
+}
+  
+.px1 {
+    padding-left: var(--space-1);
+    padding-right: var(--space-1);
+}
+  
+.p2 {
+    padding: var(--space-2);
+}
+  
+.py2 {
+    padding-top: var(--space-2);
+    padding-bottom: var(--space-2);
+}
+  
+.px2 {
+    padding-left: var(--space-2);
+    padding-right: var(--space-2);
+}
+  
+.p3 {
+    padding: var(--space-3;
+}
+  
+.py3 {
+    padding-top: var(--space-3;
+    padding-bottom: var(--space-3;
+}
+  
+.px3 {
+    padding-left: var(--space-3;
+    padding-right: var(--space-3;
+}
+  
+.p4 {
+    padding: var(--space-4;
+}
+  
+.py4 {
+    padding-top: var(--space-4;
+    padding-bottom: var(--space-4;
+}
+  
+.px4 {
+    padding-left: var(--space-4;
+    padding-right: var(--space-4;
+}
+ 
