--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,13 @@
     --space-2: 1.0rem;
     --space-3: 1.5rem;
     --space-4: 2.0rem;
+    --site-color: #cecece;
 }
 
 html, body {
     height: auto;
     min-height: 100%;
-    font-size: 24px;
+    font-size: 16px;
 }
 
 body {
@@ -19,9 +20,15 @@ body {
     font-family: 'Aclonica', sans-serif;
     padding:0;
     margin:0;
-    color: #cecece;
+    color: var(--site-color);
     text-align: center;
 }
+
+.measure {
+    margin: 0 auto;
+    max-width: 42rem;
+}
+
 
 .container {
     display: flex; 
@@ -32,12 +39,11 @@ body {
 img {
     max-width: 100%;
     height: auto;
-    margin: 10px;
 }
 
 p {
     font-family: 'Open Sans', sans-serif;
-    font-size: 0.6rem;
+    font-size: 1.0rem;
 }
 
 a img:hover {
@@ -54,55 +60,48 @@ a:active {
 
 /* Header */
 
-header {
-    display: flex;
-    justify-content: center;
+.site-header {
     background-color: #151515;
     width: 100%;
-    height: 140px;
+    height: 5.8rem;
     box-shadow: 0 6px 6px #151515;
+    overflow: hidden;
+    padding-top: 1.0rem;
+    padding-bottom: 1.0rem;
 }
 
-.navbar {
-    display: flex;
+.site-logo-img {
+    height: 5.5rem;
+    width: auto;
+    margin: 0 20px;
+}
+
+.site-title-img {
+    height: 3.2rem;
+    width: auto;
+    margin: auto;
+}
+
+.site-github-img {
+    height: 3.5rem;
+    width: auto;
+    margin: 0 20px;
+}
+
+.site-header div {
+    justify-content: space-between;
     align-items: center;
-    justify-content: space-evenly;
-    margin-right: 20px;
-    max-width: 1500px;
-    height: 140px;
-    vertical-align: middle;
-}
-
-.navbar a {
-    margin-right: 3vw;
-}
-
-.navbar img {
-    margin-right: 3vw;
-    max-height: 110px;
-}
-
-.title img {
-    max-height: 18px;
-}
-
-.github {
-    width: 72px;
-    height: auto;
 }
 
 /* Body Content */
 
 .main {
-    margin-top: 60px;
-    margin-bottom: 30px;
-    padding: 0 10%;
-    z-index: 1;
-    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     overflow: hidden;
+    padding-top: 1.5rem;
+    padding-bottom: 2rem;
 }
 
 .main div {
@@ -116,16 +115,6 @@ header {
     height: 40vh;
     max-height: 40vh;
     margin: auto;
-}
-
-/* Game Title */
-
-.game-title {
-    height: 14vh;
-}
-
-.game-title p {
-    margin-top: -18px;
 }
 
 /* Releases */
@@ -164,7 +153,6 @@ footer {
     background-color: #151515;
     display: flex;
     justify-content: center;
-    font-size: 21px;
     box-shadow: 0 -6px 6px #151515;
 }
 
@@ -176,13 +164,36 @@ footer {
     font-size: 18px;
 }
 
-a:hover {
-    color: #828282;
+/* Cards */
+
+.card {
+    border: 2px solid #191919;
+    border-radius: 10px;
+    background-color: #191919;
+    box-shadow: 0 6px 10px 0 rgba(0,0,0,0.4);
+    transition: 0.2s;
+    margin: 1rem;
+    padding: 1rem;
 }
 
-h4 {
-    line-height: 1.7em;
+.card:hover {
+    border: 2px solid #4690cc;
+    box-shadow: 0 12px 20px 0 rgba(0,0,0,0.4);
 }
+
+.card img:hover {
+    filter: brightness(100%);
+}
+
+.game {
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+.game a:hover {
+    color: var(--site-color);
+}
+
 
 /* Utility Spacing */
 
@@ -287,23 +298,23 @@ h4 {
 }
   
 .mxn1 {
-    margin-left: -var(--space-1);
-    margin-right: -var(--space-1);
+    margin-left: var(--space-1);
+    margin-right: var(--space-1);
 }
   
 .mxn2 {
-    margin-left: -var(--space-2);
-    margin-right: -var(--space-2);
+    margin-left: var(--space-2);
+    margin-right: var(--space-2);
 }
   
 .mxn3 {
-    margin-left: -var(--space-3);
-    margin-right: -var(--space-3);
+    margin-left: var(--space-3);
+    margin-right: var(--space-3);
 }
   
 .mxn4 {
-    margin-left: -var(--space-4);
-    margin-right: -var(--space-4);
+    margin-left: var(--space-4);
+    margin-right: var(--space-4);
 }
   
 .mx-auto {
@@ -340,30 +351,81 @@ h4 {
 }
   
 .p3 {
-    padding: var(--space-3;
+    padding: var(--space-3);
 }
   
 .py3 {
-    padding-top: var(--space-3;
-    padding-bottom: var(--space-3;
+    padding-top: var(--space-3);
+    padding-bottom: var(--space-3);
 }
   
 .px3 {
-    padding-left: var(--space-3;
-    padding-right: var(--space-3;
+    padding-left: var(--space-3);
+    padding-right: var(--space-3);
 }
   
 .p4 {
-    padding: var(--space-4;
+    padding: var(--space-4);
 }
   
 .py4 {
-    padding-top: var(--space-4;
-    padding-bottom: var(--space-4;
+    padding-top: var(--space-4);
+    padding-bottom: var(--space-4);
 }
   
 .px4 {
-    padding-left: var(--space-4;
-    padding-right: var(--space-4;
+    padding-left: var(--space-4);
+    padding-right: var(--space-4);
 }
- 
+
+/* Media Queries */
+
+@media screen and (max-width: 32rem) {
+    html {
+        font-size: 12px;
+    }
+
+    .mobile-hidden {
+        display: none !important;
+        width: 0;
+        height: 0;
+    }
+
+    .mobile-right{
+        margin-right: -100px;
+    }
+
+    .container {
+        justify-content: space-between;
+    }
+
+    .site-title-img {
+        height: 2.1rem;
+        margin-right: 20px;
+    }
+
+    .spacer {
+        min-width: 3vw;
+    }
+}
+
+@media screen and (max-width: 48rem) {
+    html {
+        font-size: 14px;
+    }
+}
+
+@media screen and (min-width: 48rem) {
+    html {
+        font-size: 16px;
+    }
+
+    .mobile-hidden {
+    }
+}
+
+@media screen and (min-width: 64rem) {
+    html {
+        font-size: 18px;
+    }
+}
