--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,49 @@
+:root {
+    --space-1: .5rem;
+    --space-2: 1.0rem;
+    --space-3: 1.5rem;
+    --space-4: 2.0rem;
+    --site-color: #cecece;
+}
+
+html, body {
+    height: auto;
+    min-height: 100%;
+    font-size: 16px;
+}
+
 body {
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    background-color: #333333;
     font-family: 'Aclonica', sans-serif;
-    font-size: 24px;
     padding:0;
     margin:0;
-    background-color: #333333;
-    color: #cecece;
+    color: var(--site-color);
     text-align: center;
+}
+
+.measure {
+    margin: 0 auto;
+    max-width: 42rem;
+}
+
+
+.container {
+    display: flex; 
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+img {
+    max-width: 100%;
+    height: auto;
 }
 
 p {
     font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
-}
-
-img {
-    margin: 10px;
+    font-size: 1.0rem;
 }
 
 a img:hover {
@@ -31,55 +60,48 @@ a:active {
 
 /* Header */
 
-header {
-    display: flex;
-    justify-content: center;
+.site-header {
     background-color: #151515;
     width: 100%;
-    height: 140px;
+    height: 5.8rem;
     box-shadow: 0 6px 6px #151515;
+    overflow: hidden;
+    padding-top: 1.0rem;
+    padding-bottom: 1.0rem;
 }
 
-.navbar {
-    display: flex;
+.site-logo-img {
+    height: 5.5rem;
+    width: auto;
+    margin: 0 20px;
+}
+
+.site-title-img {
+    height: 3.2rem;
+    width: auto;
+    margin: auto;
+}
+
+.site-github-img {
+    height: 3.5rem;
+    width: auto;
+    margin: 0 20px;
+}
+
+.site-header div {
+    justify-content: space-between;
     align-items: center;
-    justify-content: space-evenly;
-    margin-right: 20px;
-    max-width: 1500px;
-    height: 140px;
-    vertical-align: middle;
-}
-
-.navbar a {
-    margin-right: 3%;
-}
-
-.navbar img {
-    margin-right: 3%;
-    max-height: 110px;
-}
-
-.title img {
-    max-height: 18px;
-}
-
-.github {
-    width: 72px;
-    height: auto;
 }
 
 /* Body Content */
 
 .main {
-    margin-top: 60px;
-    margin-bottom: 30px;
-    padding: 0 10%;
-    z-index: 1;
-    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     overflow: hidden;
+    padding-top: 1.5rem;
+    padding-bottom: 2rem;
 }
 
 .main div {
@@ -93,16 +115,6 @@ header {
     height: 40vh;
     max-height: 40vh;
     margin: auto;
-}
-
-/* Game Title */
-
-.game-title {
-    height: 14vh;
-}
-
-.game-title p {
-    margin-top: -18px;
 }
 
 /* Releases */
@@ -141,7 +153,6 @@ footer {
     background-color: #151515;
     display: flex;
     justify-content: center;
-    font-size: 21px;
     box-shadow: 0 -6px 6px #151515;
 }
 
@@ -153,10 +164,268 @@ footer {
     font-size: 18px;
 }
 
-a:hover {
-    color: #828282;
+/* Cards */
+
+.card {
+    border: 2px solid #191919;
+    border-radius: 10px;
+    background-color: #191919;
+    box-shadow: 0 6px 10px 0 rgba(0,0,0,0.4);
+    transition: 0.2s;
+    margin: 1rem;
+    padding: 1rem;
 }
 
-h4 {
-    line-height: 1.7em;
+.card:hover {
+    border: 2px solid #4690cc;
+    box-shadow: 0 12px 20px 0 rgba(0,0,0,0.4);
+}
+
+.card img:hover {
+    filter: brightness(100%);
+}
+
+.game {
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+.game a:hover {
+    color: var(--site-color);
+}
+
+
+/* Utility Spacing */
+
+.m0 {
+    margin: 0;
+}
+  
+.mt0 {
+    margin-top: 0;
+}
+  
+.mr0 {
+    margin-right: 0;
+}
+  
+.mb0 {
+    margin-bottom: 0;
+}
+  
+.ml0 {
+    margin-left: 0;
+}
+  
+.m1 {
+    margin: var(--space-1);
+}
+  
+.mt1 {
+    margin-top: var(--space-1);
+}
+  
+.mr1 {
+    margin-right: var(--space-1);
+}
+  
+.mb1 {
+    margin-bottom: var(--space-1);
+}
+  
+.ml1 {
+    margin-left: var(--space-1);
+}
+  
+.m2 {
+    margin: var(--space-2);
+}
+  
+.mt2 {
+    margin-top: var(--space-2);
+}
+  
+.mr2 {
+    margin-right: var(--space-2);
+}
+  
+.mb2 {
+    margin-bottom: var(--space-2);
+}
+  
+.ml2 {
+    margin-left: var(--space-2);
+}
+  
+.m3 {
+    margin: var(--space-3);
+}
+  
+.mt3 {
+    margin-top: var(--space-3);
+}
+  
+.mr3 {
+    margin-right: var(--space-3);
+}
+  
+.mb3 {
+    margin-bottom: var(--space-3);
+}
+  
+.ml3 {
+    margin-left: var(--space-3);
+}
+  
+.m4 {
+    margin: var(--space-4);
+}
+  
+.mt4 {
+    margin-top: var(--space-4);
+}
+  
+.mr4 {
+    margin-right: var(--space-4);
+}
+  
+.mb4 {
+    margin-bottom: var(--space-4);
+}
+  
+.ml4 {
+    margin-left: var(--space-4);
+}
+  
+.mxn1 {
+    margin-left: var(--space-1);
+    margin-right: var(--space-1);
+}
+  
+.mxn2 {
+    margin-left: var(--space-2);
+    margin-right: var(--space-2);
+}
+  
+.mxn3 {
+    margin-left: var(--space-3);
+    margin-right: var(--space-3);
+}
+  
+.mxn4 {
+    margin-left: var(--space-4);
+    margin-right: var(--space-4);
+}
+  
+.mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+}
+  
+.p1 {
+    padding: var(--space-1);
+}
+  
+.py1 {
+    padding-top: var(--space-1);
+    padding-bottom: var(--space-1);
+}
+  
+.px1 {
+    padding-left: var(--space-1);
+    padding-right: var(--space-1);
+}
+  
+.p2 {
+    padding: var(--space-2);
+}
+  
+.py2 {
+    padding-top: var(--space-2);
+    padding-bottom: var(--space-2);
+}
+  
+.px2 {
+    padding-left: var(--space-2);
+    padding-right: var(--space-2);
+}
+  
+.p3 {
+    padding: var(--space-3);
+}
+  
+.py3 {
+    padding-top: var(--space-3);
+    padding-bottom: var(--space-3);
+}
+  
+.px3 {
+    padding-left: var(--space-3);
+    padding-right: var(--space-3);
+}
+  
+.p4 {
+    padding: var(--space-4);
+}
+  
+.py4 {
+    padding-top: var(--space-4);
+    padding-bottom: var(--space-4);
+}
+  
+.px4 {
+    padding-left: var(--space-4);
+    padding-right: var(--space-4);
+}
+
+/* Media Queries */
+
+@media screen and (max-width: 32rem) {
+    html {
+        font-size: 12px;
+    }
+
+    .mobile-hidden {
+        display: none !important;
+        width: 0;
+        height: 0;
+    }
+
+    .mobile-right{
+        margin-right: -100px;
+    }
+
+    .container {
+        justify-content: space-between;
+    }
+
+    .site-title-img {
+        height: 2.1rem;
+        margin-right: 20px;
+    }
+
+    .spacer {
+        min-width: 3vw;
+    }
+}
+
+@media screen and (max-width: 48rem) {
+    html {
+        font-size: 14px;
+    }
+}
+
+@media screen and (min-width: 48rem) {
+    html {
+        font-size: 16px;
+    }
+
+    .mobile-hidden {
+    }
+}
+
+@media screen and (min-width: 64rem) {
+    html {
+        font-size: 18px;
+    }
 }
