BitVault page WIP

--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -18,10 +18,12 @@
 
     <title>Enigma Dragons Games</title>
 
+    <link rel="stylesheet" href="/css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica|Open+Sans" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="/css/main.css" type="text/css">
     <link rel="stylesheet" href="/css/sss.css" type="text/css">
+    <link rel="stylesheet" href="/css/bitvault.css" type="text/css">
 
     <!-- Image Carousel -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
