--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,8 @@ body {
     -webkit-box-sizing: border-box;
     background-color: #333333;
     font-family: 'Aclonica', sans-serif;
-    padding:0;
-    margin:0;
+    padding:0 !important;
+    margin:0 !important;
     color: var(--site-color);
     text-align: center;
 }
@@ -35,7 +35,7 @@ hr {
 }
 
 
-.container {
+.ctn {
     display: flex; 
     flex-wrap: wrap;
     justify-content: center;
@@ -400,7 +400,7 @@ footer {
         margin-right: -100px;
     }
 
-    .container {
+    .ctn {
         justify-content: space-between;
     }
 
