--- a/css/bitvault.css
+++ b/css/bitvault.css
@@ -7,7 +7,7 @@
 
 .product {
 	margin-top: 1em;
-	margin-bottom: 2em;
+	margin-bottom: 6em;
 }
 
 .product h1, h2, h3, h4, h5, h6 {
@@ -21,7 +21,9 @@ a:hover {
 }
 
 .product hr {
-	border-top: 1px solid 
+	border-top: 1px solid; 
+	margin-top: 0.2em;
+	margin-bottom: 0.2em;
 }
 
 .product .img-thumbnail {
@@ -34,12 +36,16 @@ a:hover {
 	background-color: #494949;
 }
 
-.container .site-header {
+.product p {
+	text-align: left;
+}
+
+.site-header {
 	background-color: #151515;
 	width: 100%;
 	height: 5.8rem;
+	min-height: 6.8rem;
 	box-shadow: 0 6px 6px #151515;
-	overflow: hidden;
 	padding-top: 1.0rem;
 	padding-bottom: 1.0rem;
 }
@@ -100,13 +106,13 @@ a:hover {
 }
 
 .tag {
-	padding: 3px;
+	padding: 6px;
 	background-color: #494949;
-	border: 0px solid #17d5f7;
+	border: 0px solid;
 	border-radius: 5px;
 	display: inline-block;
 	margin-bottom: 5px;
-	color: #ffffff;
+	color: var(--hack);
 }
 
 .review {
@@ -143,9 +149,17 @@ a:hover {
 }
 
 .hack {
-	color: #17d5f7;
+	color: var(--hack);
 }
 
 .fa-thumbs-up {
-	color: #17d5f7;
+	color: var(--hack);
+}
+
+.slider {
+	width: 100%;
+	max-width: 600px;
+	height: 40vh;
+	max-height: 40vh;
+	margin: auto;
 }
